# paychatai

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
backend-server/: README.md  pyproject.toml
backend-server/src/: app.py  openrouterapi.py  postgresDB.py
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: chatApi.ts  modelData.ts  route.ts
src/app/api/chat/[modelId]/: route.ts
src/app/api/create_model/: route.ts
src/app/api/get_model_did/: route.ts
src/app/api/model_list/: route.ts
src/app/api/playground/: route.ts
src/app/chats/[modelId]/: page.tsx
src/app/create/: page.tsx
src/app/hooks/: usePayments.tsx
src/app/playground/: page.tsx
src/components/: BackStepButton.tsx  CallToActionSection.tsx  Chat.tsx  ChatContainer.tsx  ChatInput.tsx  ClientProvider.tsx  Container.tsx  CreateButton.tsx  DemoCards.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  LoadingIndicator.tsx  LoginModal.tsx  Message.tsx  ModelDetailFormStep.tsx  ModelSideBar.tsx  MonetizationFormStep.tsx  NextStepButton.tsx  ReviewFormStep.tsx  SelectInput.tsx  Stepper.tsx  TestimonialsSection.tsx  TextArea.tsx  TextInput.tsx  ThreeDotLoading.tsx  TransactionalModel.tsx  TutorialSection.tsx
src/data/: AppContext.tsx  constants.ts
src/hooks/: useChat.tsx  useCreateModel.tsx  usePayments.tsx  usePlayground.tsx
src/services/: dummy_server.ts
src/store/atoms/: createPageAtoms.jsx
src/utils/: messageUtils.tsx
